--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-time-picker/detector-time-picker.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-time-picker/detector-time-picker.component.html
@@ -1,6 +1,6 @@
 <div class="timepicker" id="timePicker">
   <!-- <div class="time-picker-container" *ngIf="globals.openTimePicker" (keydown.escape)="escapeHandler($event)" (keydown.Tab)="tabHandler($event)"> -->
-  <fab-callout *ngIf="openTimePickerCallout" [setInitialFocus]="true" [target]="target"
+  <fab-callout [hidden]="!openTimePickerCallout" [setInitialFocus]="true" [target]="target"
     (onDismiss)="cancelTimeRange()" [isBeakVisible]="false">
     <div style="width: 320px;">
       <div class="callout-padding">
