--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution-view-container/solution-view-container.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution-view-container/solution-view-container.component.html
@@ -12,7 +12,7 @@
     <a name="feedbackbutton" type="button" class="solution-feedback-button" id="solutionNotHelpfulButton" [ngClass]="{'btn-primary':noSelected}" (click)="feedbackButtonClicked(false)">
         No
     </a>
-    <fab-callout [target]="'#solutionNotHelpfulButton'" *ngIf="showReasonsCallout" (onDismiss)="closeReasonsCallout()">
+    <fab-callout [target]="'#solutionNotHelpfulButton'" [hidden]="!showReasonsCallout" (onDismiss)="closeReasonsCallout()">
       <div style="padding: 18px;">
         <fab-choice-group [selectedKey]="selectedCalloutOption && selectedCalloutOption.key" [options]="calloutOptions" (onChange)="setCalloutSelection($event)" [label]="'Please let us know why!'" [required]="true"></fab-choice-group>
         <div style="text-align: right;">
