--- a/AngularApp/projects/applens/src/app/modules/dashboard/onboarding-flow/onboarding-flow.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/onboarding-flow/onboarding-flow.component.html
@@ -342,7 +342,7 @@
                 <fab-default-button id="develop-tab-branch-selector" (click)="branchToggleCallout()"
                   [styles]="branchButtonStyle" [ariaLabel]="displayName" [iconProps]="{ iconName: 'BranchSearch' }">
                   Branch: {{displayBranch}}</fab-default-button>
-                <fab-callout *ngIf="isCallOutVisible" (onDismiss)="closeCallout()" [setInitialFocus]="true"
+                <fab-callout [hidden]="!isCallOutVisible" (onDismiss)="closeCallout()" [setInitialFocus]="true"
                   [target]="'#develop-tab-branch-selector'">
                   <div class="callout-padding">
                     <div>
