Fixing Feedback panel height

--- a/AngularApp/projects/diagnostic-data/src/lib/components/fabric-feedback/fabric-feedback.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/fabric-feedback/fabric-feedback.component.scss
@@ -121,4 +121,9 @@
     .ms-Panel-headerText {
         font-weight: 600;
     }
+
+    .submitted-panel-height {
+        height:100px;
+    }
+    
 }
