--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/linux-python-cpu-profiler/linux-python-cpu-profiler.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/linux-python-cpu-profiler/linux-python-cpu-profiler.component.html
@@ -6,7 +6,7 @@
           (SessionsEvent)="updateSessions($event)" [allLinuxInstancesOnAnt98]="allLinuxInstancesOnAnt98">
       </profiler>
   </div>
-  <h3>What you should know before collecting a Python CPU profiling trace</h3>
+  <h3>What you should know before collecting a Python profiling trace</h3>
   <ul>
       <li *ngFor="let statement of thingsToKnowBefore">{{statement}}</li>
   </ul>
