Adding Resiliency Score download button to applens

--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-data/tab-data.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-data/tab-data.component.html
@@ -11,8 +11,36 @@
       (click)="internalExternalToggle()"></fab-command-bar-item>
     <fab-command-bar-item key="favoriteDetector" [text]="pinUnpinDetectorText"
       [iconProps]="{ iconName: pinUnpinDetectorIcon }" (click)="addOrRemoveDetector()"></fab-command-bar-item>
+    <fab-command-bar-item key="downloadReport" [text]="downloadReportText" [style]="displayDownloadReportButtonStyle" [id]="'downloadReportId'" 
+      [iconProps]="downloadReportIcon" (click)="downloadReport()" [disabled]="downloadReportButtonDisabled"></fab-command-bar-item>    
   </items>
 </fab-command-bar>
+<fab-coachmark 
+   *ngIf="showCoachmark==true"
+  [attr.id]="'fab-coachmark'" 
+  [target]="downloadReportId" 
+  (onAnimationOpenEnd)="showingTeachingBubble()"
+  [positioningContainerProps]="coachmarkPositioningContainerProps"
+  delayBeforeCoachmarkAnimation="4000"
+  ariaAlertText="A coachmark has appeared"
+  ariaDescribedBy="coachmark-desc1" 
+  ariaLabelledBy="coachmark-label1"
+  ariaDescribedByText="Press enter or alt + C to open the coachmark notification"
+  ariaLabelledByText="Coachmark notification">
+  <fab-teachingbubble
+    *ngIf="showTeachingBubble==true"    
+    headline="Download Resiliency Score report here!" 
+    (onDismiss)="coachMarkViewed()" 
+    [target]="downloadReportId"    
+    [hasCloseIcon]="true" 
+    [calloutProps]="teachingBubbleCalloutProps"
+    closeButtonAriaLabel="Close"
+    hasCondensedHeadline="true"
+    ariaDescribedBy="downloadreport-description1" 
+    ariaLabelledBy="downloadreport-label1">
+    Click here to download a report to check how well this Web App scores against our recommended resiliency best practices.
+  </fab-teachingbubble>
+</fab-coachmark>
 <detector-container [analysisMode]="analysisMode" [detector]="detector"></detector-container>
 
 <fab-panel [isOpen]="showPanel" [type]="PanelType.smallFixedFar" [hasCloseButton]="false"
