Improve performance of applens left search (#1759)
* Improve performance of applens left search

* trying to optimize the debounce time

Co-authored-by: Ajay Sharma <ajsharm@microsoft.com>

--- a/AngularApp/projects/applens/src/app/modules/dashboard/side-nav/side-nav.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/side-nav/side-nav.component.html
@@ -1,7 +1,7 @@
 <aside class="main-sidebar">
   <section class="sidebar" id="sidebar">
     <collapsible-menu theme="light">
-      <search-box tabindex="0" (searchValueChange)="updateSearch($event)" [searchValue]="searchValue"
+      <search-box tabindex="0" (searchValueChange)="updateSearch($event)"
         [ariaLabel]="searchAriaLabel"></search-box>
       <menu-scroll>
         <section-divider [label]="'Overview'" [selected]="isSectionHeaderSelected('')" [initiallyExpanded]="false"
